--- a/Kurokami_CV/Hust_CV/index.html
+++ b/Kurokami_CV/Hust_CV/index.html
@@ -66,7 +66,7 @@
                 <div class="card-background-container">
                     <img class="card-background" src="./img/hust-back.png">
                 </div>
-                <div
+                <div class="profile-image-container"
                     style="position: absolute; top:10vw; left:2vw ; border-radius: 50%; border: 0.3vw solid white; width: 10vw;height: 10vw; overflow: hidden;">
                     <img style="width: 100%;" src="./img/soict.jpg">
                 </div>
